src/objects/Region_Update__mdt.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                    <default>true</default>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofi_Region__c</fullName>
        <label>ofi Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                    <default>true</default>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>EMENA</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofi_Sub_Region_2__c</fullName>
        <label>ofi Sub Region 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>South Asia</fullName>
                    <default>true</default>
                    <label>South Asia</label>
                </value>
                <value>
                    <fullName>North Europe</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
                <value>
                    <fullName>North Africa</fullName>
                </value>
                <value>
                    <fullName>Polynesia</fullName>
                </value>
                <value>
                    <fullName>Middle Africa</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>West Asia</fullName>
                </value>
                <value>
                    <fullName>Australia and New Zealand</fullName>
                </value>
                <value>
                    <fullName>West Europe</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>West Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>East Africa</fullName>
                </value>
                <value>
                    <fullName>South-East Asia</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>Melanesia</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Channel Islands</fullName>
                </value>
                <value>
                    <fullName>Central Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofi_Sub_Region__c</fullName>
        <label>ofi Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                    <default>true</default>
                    <label>Asia</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Region Update</label>
    <pluralLabel>Region_Updates</pluralLabel>
</CustomObject>